--- a/extensions/wishlist-button/blocks/wishlist-icon.liquid
+++ b/extensions/wishlist-button/blocks/wishlist-icon.liquid
@@ -1,26 +1,65 @@
-<div id="wishlist-btn-block" x-data="{ wishlisted: false }">
+<div id="wishlist-btn-block" x-data="wishlist">
   <div style="display: flex; gap: 10px; align-items: center;">
-    <span class="wishlist-btn-icon" @click="wishlisted = !wishlisted">
-      <svg xmlns="http://www.w3.org/2000/svg" :fill="wishlisted ? 'currentColor' : 'none'" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+    <span class="wishlist-btn-icon" @click="handleButtonClick">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        :fill="added ? 'currentColor' : 'none'"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
       </svg>
     </span>
     {% if block.settings.button_Text != blank or block.settings.show_only_icon == false %}
-      <span class="wishlist-btn-text" x-text="wishlisted ? 'Item added to Wishlist' : '{{ block.settings.button_text }}'"></span>
+      <span
+        class="wishlist-btn-text"
+        x-text="added ? 'Item added to Wishlist' : '{{ block.settings.button_text }}'"
+      ></span>
     {% endif %}
   </div>
 </div>
 
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <script>
-  const data = {
+  const dataToSend = {
+    sessionId: localStorage.getItem("wishlist_cg_sid"),
     productId: "{{ product.id }}",
     shop: "{{ shop.permanent_domain }}",
     customerId: {% if customer %}"{{ cusomter.id }}"{% else %}null{% endif %}
   }
-  function addProductToWishlist() {
-    
-  }
+
+  document.addEventListener("alpine:init", () => {
+    // Call API to get user wishlist
+    Alpine.data("wishlist", (initValue=false) => ({
+      added: initValue,
+
+      handleButtonClick() {
+        this.added ? this.removeProductFromWishlist() : this.addProductToWishlist();
+      },
+
+      addProductToWishlist() {
+        fetch("https://fat-themselves-promotional-understanding.trycloudflare.com/api/wishlist/add", {
+          method: "POST",
+          body: JSON.stringify(dataToSend)
+        }).then(res => res.json())
+          .then(data => {
+            // Check if sessionId stored in localStorage
+            const sessionId = data.sessionId;
+
+            if (!localStorage.getItem("wishlist_cg_sid")) {
+              localStorage.setItem("wishlist_cg_sid", sessionId);
+            }
+
+            // Update the wishlist icon to show item is added.
+            this.added = true;
+          })
+      },
+      removeProductFromWishlist() {
+        console.log("Product removed from wishlist");
+      }
+    }))
+  })
 </script>
 
 <style>
@@ -72,4 +111,3 @@
   ]
 }
 {% endschema %}
-
